src/objects/Canadian_Postal_Code_Market_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CSP-3077 &amp; CSP 3075
this custom setting is used to manage Canadian postal code and corresponding Canadian market Id mapping</description>
    <fields>
        <fullName>Canadian_Postal_Code__c</fullName>
        <description>CSP-3077 &amp; CSP-3075</description>
        <label>Canadian Postal Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_State_Code__c</fullName>
        <description>CSP-3077
CSP-3075</description>
        <label>Default State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Id__c</fullName>
        <label>Market Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <label>Market Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Canadian Postal Code Market Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Canadian_Postal_Code__c</columns>
        <columns>Default_State_Code__c</columns>
        <columns>Market_Id__c</columns>
        <columns>Market_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>